force-app/main/default/objects/Opportunity/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>Vehicle Loan</fullName>
            </value>
            <value>
                <fullName>Emergency Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>