force-app/main/default/objects/Opportunity/validationRules/Interest_Rate_Required_For_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_Rate_Required_For_Closed_Won</fullName>
    <active>true</active>
    <description>Interest Rate must be filled before an Opportunity is moved to Closed Won.</description>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Closed Won&quot;), ISBLANK(Interest_Rate__c))</errorConditionFormula>
    <errorDisplayField>Interest_Rate__c</errorDisplayField>
    <errorMessage>Enter the Interest Rate before moving to Closed Won</errorMessage>
</ValidationRule>